[tool.poetry]
authors = ["Iven Winkelmann <ivenw@users.noreply.github.com>"]
description = ""
name = "acneviz"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.11.0"
networkx = "^3.0"
pandas = "^1.5.2"
numpy = "^1.24.1"
kaleido = "0.2.1"
tqdm = "^4.64.1"
Pillow = "^9.4.0"
joblib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"
pytest = "^7.1.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
