[tool.poetry]
authors = ["Iven Winkelmann <ivenw@users.noreply.github.com>"]
description = ""
name = "acneviz"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.10"
networkx = "^3.0"
pandas = "^1.4"
kaleido = "0.2"
tqdm = "^4.64"
Pillow = "^9.4"
joblib = "^1.2"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5"
pytest = "^7.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
